100vh - 100% (avoid x-overflow)

--- a/P3 - Project coding/css/nav.css
+++ b/P3 - Project coding/css/nav.css
@@ -5,7 +5,7 @@ nav {
 	align-items: center;
 	list-style-type: none;
 	min-height: 150px;
-	width: 100vw;
+	width: 100%;
 }
 
 #nav-img{
